--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -8,25 +8,25 @@
 
             <details open>
                 <summary class="white" globalize="overview">Overview</summary>
-                <a href="./research/ethnology" globalize="summary">1. Summary</a>
-                <a href="./research/ethnology/language.html" globalize="language">2. Language</a>
-                <a href="./research/ethnology/religion.html" globalize="religion">3. Religion</a>
+                <a href="./research/ethnology" globalize="summary" title="Summary">1. Summary</a>
+                <a href="./research/ethnology/language.html" globalize="language" title="Language">2. Language</a>
+                <a href="./research/ethnology/religion.html" globalize="religion" title="Religion">3. Religion</a>
             </details>
 
             <details open>
                 <summary class="white" globalize="culture">Culture</summary>
                 <details>
                     <summary class="white" globalize="language">Language</summary>
-                    <a href="./research/ethnology/linguistics/old_aramaic.html" globalize="old_aramaic">Old Aramaic</a>
-                    <a href="./research/ethnology/linguistics/official_aramaic.html" globalize="official_aramaic">Official Aramaic</a>
-                    <a href="./research/ethnology/linguistics/middle_aramaic.html" globalize="middle_aramaic">Middle Aramaic</a>
-                    <a href="./research/ethnology/linguistics/late_aramaic.html" globalize="late_aramaic">Late Aramaic</a>
-                    <a href="./research/ethnology/linguistics/modern_aramaic.html" globalize="modern_aramaic">Modern Aramaic</a>
+                    <a href="./research/ethnology/linguistics/old_aramaic.html" globalize="old_aramaic" title="Old Aramaic">Old Aramaic</a>
+                    <a href="./research/ethnology/linguistics/official_aramaic.html" globalize="official_aramaic" title="Official Aramaic">Official Aramaic</a>
+                    <a href="./research/ethnology/linguistics/middle_aramaic.html" globalize="middle_aramaic" title="Middle Aramaic">Middle Aramaic</a>
+                    <a href="./research/ethnology/linguistics/late_aramaic.html" globalize="late_aramaic" title="Late Aramaic">Late Aramaic</a>
+                    <a href="./research/ethnology/linguistics/modern_aramaic.html" globalize="modern_aramaic" title="Modern Aramaic">Modern Aramaic</a>
                 </details>
                 <details>
-                    <summary class="white" globalize="religion">Religion</summary>
-                    <a href="#" globalize="paganism">Paganism</a>
-                    <a href="#" globalize="christianity">Christianity</a>
+                    <summary class="white" globalize="religion" title="Religion">Religion</summary>
+                    <a href="#" globalize="paganism" title="Paganism">Paganism</a>
+                    <a href="#" globalize="christianity" title="Christianity">Christianity</a>
                 </details>
  
             </details>
@@ -40,8 +40,8 @@
     <h1 globalize="overview">Overview</h1>
     <nav class="crumbs pointer pt05">
         <ol>
-            <li><a href="#" globalize="research">Research</a></li>
-            <li><a href="#" globalize="ethnology">Ethnology</a></li>
+            <li><a href="#" globalize="research" title="Research">Research</a></li>
+            <li><a href="#" globalize="ethnology" title="Ethnology">Ethnology</a></li>
             <li globalize="overview">Overview</li>
         </ol>
     </nav>
