--- a/research/ethnology/language.html
+++ b/research/ethnology/language.html
@@ -33,31 +33,31 @@
             </thead>
             <tbody>
                 <tr>
-                    <td globalize="old_aramaic">Old Aramaic</td>
+                    <td><a href="./research/ethnology/linguistics/old_aramaic.html" globalize="old_aramaic" title="Old Aramaic">Old Aramaic</a></td>
                     <td>1</td>
                     <td>925 BC - 700 BC</td>
                     <td>Extinct</td>
                 </tr>
                 <tr>
-                    <td globalize="official_aramaic">Official Aramaic</td>
+                    <td><a href="./research/ethnology/linguistics/official_aramaic.html" globalize="official_aramaic" title="Official Aramaic">Official Aramaic</a></td>
                     <td>1</td>
                     <td>700 BC - 300 BC</td>
                     <td>Extinct</td>
                 </tr>
                 <tr>
-                    <td globalize="middle_aramaic">Middle Aramaic</td>
+                    <td><a href="./research/ethnology/linguistics/middle_aramaic.html" globalize="middle_aramaic" title="Middle Aramaic">Middle Aramaic</a></td>
                     <td>1</td>
                     <td>300 BC - 100 AD</td>
                     <td>Extinct</td>
                 </tr>
                 <tr>
-                    <td globalize="late_aramaic">Late Aramaic</td>
+                    <td><a href="./research/ethnology/linguistics/late_aramaic.html" globalize="late_aramaic" title="Late Aramaic">Late Aramaic</a></td>
                     <td>2</td>
                     <td>100 AD - 1200 AD</td>
                     <td>Active</td>
                 </tr>
                 <tr>
-                    <td globalize="modern_aramaic">Modern Aramaic</td>
+                    <td><a href="./research/ethnology/linguistics/modern_aramaic.html" globalize="modern_aramaic" title="Modern Aramaic">Modern Aramaic</a></td>
                     <td>20+</td>
                     <td>1200 AD</td>
                     <td>Active</td>
