--- a/research/ethnology/linguistics/old_aramaic.html
+++ b/research/ethnology/linguistics/old_aramaic.html
@@ -18,7 +18,7 @@
     </nav>
 
     <article class="mt2">
-        <p>Old Aramaic or Ancient Aramaic (c. 850-1000 BC) refers to the most punctual phase of the Aramaic language, known from the bilingual inscription discovered 1979 in Tell Fekheriyah. The language was first spoken by the Arameans.</p>        
+        <p>Old Aramaic or Ancient Aramaic (c. 850-1000 BC) refers to the most punctual phase of the Aramaic language, known from the bilingual inscription discovered 1979 in Tell Fekheriyah. The language was first spoken by the Arameans and possibly by Aram, son of Shem, from whom it gets its name.</p>        
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-01-13, Last update: 2021-07-30</small>
     </article>
