--- a/about/index.html
+++ b/about/index.html
@@ -49,13 +49,14 @@
         </ul>
     </section>
     <section class="mt2">
-        <h2 globalize="financing">Financing</h2>
+        <h2 globalize="contribution">Contribution</h2>
+        <h4 globalize="information" class="mt1">Information</h4>
+        <p>The Aramean Institute presents information gathered from knowledgeable Syriacs and Aramaics.</p>
+        <h4 globalize="information" class="mt1">Software code</h4>
+        <p>The Aramean Institute is built on Open Source where anyone can contribute to the development of our services.</p>
+        <h4 globalize="financing" class="mt1">Financing</h4>
         <p>The Aramean Institute is a nonprofit institution in which no part of the organization's income is distributed to its members, directors, or officers.</p>
         <p>We rely on the generous financial support of individuals and organizations to keep the Aramean Institute running.</p>
-    </section>
-    <section class="mt2">
-        <h2 globalize="contributors">Contributors</h2>
-        <p>Syriacist and Aramaicist</p>
     </section>
 </article>
 
