--- a/about/index.html
+++ b/about/index.html
@@ -53,7 +53,7 @@
         <h4 globalize="information" class="mt1">Information</h4>
         <p>The Aramean Institute presents information gathered from knowledgeable Syriacs and Aramaics.</p>
         <h4 globalize="software_code" class="mt1">Software code</h4>
-        <p>The Aramean Institute is built on Open Source where anyone can contribute to the development of our services.</p>
+        <p>The Aramean Institute is built on Open Source where anyone can contribute code to our sofware development team.</p>
         <h4 globalize="financing" class="mt1">Financing</h4>
         <p>The Aramean Institute is a nonprofit institution in which no part of the organization's income is distributed to its members, directors, or officers.</p>
         <p>We rely on the generous financial support of individuals and organizations to keep the Aramean Institute running.</p>
