--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
 
 <article class="pauto wc_xxl">
     <section>
-        <p>The Aramean Institute is a worldwide multi-institute, researching different areas, developing technology, collecting data, publishing work, offering expertise, and educating about the Aramean people.</p>    
+        <p>We are a worldwide multi-institute, researching different areas, developing technology, collecting data, publishing work, offering expertise, and educating about the Aramean people.</p>    
     </section>
     <section class="mt2">
         <h2 globalize="mission">Mission</h2>
