--- a/article/israel-recognizes-aramean-nationality.html
+++ b/article/israel-recognizes-aramean-nationality.html
@@ -27,7 +27,7 @@
         <p>
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-07-02, Last update: 2021-07-13</small>
-        <small class="gray">Source: <a target="_blank" href="https://m.knesset.gov.il/EN/activity/mmm/Arameans_in_the_Middle_%20East_and_%20Israel.pdf">Knesset Research and Information Center</a></small>
+        <small class="gray">Source:&nbsp;<a target="_blank" href="https://m.knesset.gov.il/EN/activity/mmm/Arameans_in_the_Middle_%20East_and_%20Israel.pdf">Knesset Research and Information Center</a></small>
     </article>
 
 </section>
