--- a/article/kaldu-arameans-in-babylon.html
+++ b/article/kaldu-arameans-in-babylon.html
@@ -29,7 +29,7 @@
         <p>In 612 BC, the Assyrian city of Nineveh was besieged and sacked by the alliance that King Nabopolassar formed. After a brutal battle, Nineveh fell and it led to the destruction of the Neo-Assyrian Empire and with it the Assyrian people over a few years.</p><br>
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-01-12, Last update: 2021-05-14</small>
-        <small class="gray">Source: <a target="_blank" href="https://www.britannica.com/topic/Aramaean">Encyclopædia Britannica</a> <sup>[1]</sup></small>
+        <small class="gray">Source:&nbsp;<a target="_blank" href="https://www.britannica.com/topic/Aramaean">Encyclopædia Britannica</a> <sup>[1]</sup></small>
     </article>
 
 </section>
