--- a/article/israel-recognizes-aramean-nationality.html
+++ b/article/israel-recognizes-aramean-nationality.html
@@ -16,17 +16,19 @@
         </ol>
     </nav>
 
-    <article class="mt2">
+    <p class="mt2">
         <p class="fwb">A significant and historical event: Israel is the first country in the world to acknowledge Aramean minoritiy living in Israel as a distinct ethnicity.</p>
         <br>
-        <p>Several scholars consulted with the Ministry of Interior before making the announcement based on their expert advice, and the evidence, Minister Gideon Sa'ar ruled that "the presence of the Aramean nation is evident."</p>
+        <p>Several scholars consulted with the Ministry of Interior before making the announcement based on their expert advice, and the evidence, Minister Gideon Moshe Sa'ar ruled that "the presence of the Aramean nation is evident."</p>
         <br>
         <p>Many aspects proved the existence of the ancient Aramean nation, including a shared language, a separate heritage, a religion, and a culture.</p>
+        <br>
+        <p>In September 2014, former Interior Minister Gideon issued a directive to allow Israeli Christians who are listed in the Population Registry of Israel as "Arab" to change their nationality to Aramean.</p>
         <br>
         <p>In December 2014, the Registration and Passports Section of the Population and Immigration Authority published its guidelines on the subject, whose provision permits Arameans to claim their real ethnic identities.</p>
         <p>
         <hr class="mt2 bcblack">
-        <small class="gray">Published: 2021-07-02, Last update: 2021-07-13</small>
+        <small class="gray">Published: 2021-07-02, Last update: 2022-02-07</small>
         <small class="gray">Source:&nbsp;<a target="_blank" href="https://m.knesset.gov.il/EN/activity/mmm/Arameans_in_the_Middle_%20East_and_%20Israel.pdf">Knesset Research and Information Center</a></small>
     </article>
 
