--- a/article/aram-israel-relations.html
+++ b/article/aram-israel-relations.html
@@ -24,8 +24,14 @@
         <p>As Semitic races, both Arameans and Hebrews (Israelites) trace their lineage back to Shem, son of Noah. But what ties them even closer is Aram, son of Shem.</p>
         <br>
         <p>Shem's son Aram played a key role in the creation of many nations across the Middle East and is believed to be the ancestor of both the Arameans and the Hebrews.</p>
+        <br>
+        <p>Israel's mother, Rebecka was an Aramean. His maternal grandfather is called Aramean<sup>[1]</sup> and so is his uncle Laban<sup>[2]</sup>.</p>
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-01-08, Last update: 2021-07-13</small>
+        <small class="gray">Source:&nbsp;
+            <a target="_blank" href="#">Genesis 25:20; 28:5</a> <sup>[1]</sup>,&nbsp;
+            <a target="_blank" href="#">Genesis 31:20, 24</a> <sup>[2]</sup>
+        </small>
     </article>
 
 </section>
