--- a/article/aram-israel-relations.html
+++ b/article/aram-israel-relations.html
@@ -25,7 +25,7 @@
         <br>
         <p>Shem's son Aram played a key role in the creation of many nations across the Middle East and is believed to be the ancestor of both the Arameans and the Hebrews.</p>
         <br>
-        <p>Israel's mother, Rebecka was an Aramean. His maternal grandfather is called Aramean<sup>[1]</sup> and so is his uncle Laban<sup>[2]</sup>.</p>
+        <p>Israel's mother, Rebecka was an Aramean. His maternal grandfather Bethuel is called Aramean<sup>[1]</sup> and so is his uncle Laban<sup>[2]</sup>.</p>
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-01-08, Last update: 2021-07-13</small>
         <small class="gray">Source:&nbsp;
