--- a/article/aram-israel-relations.html
+++ b/article/aram-israel-relations.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" template="../index"></script>
+<script src="https://www.front.nu/dist/front.js" template="../index"></script>
 
 <title>Aram and Israel relations</title>
 
@@ -25,12 +25,14 @@
         <br>
         <p>Shem's son Aram played a key role in the creation of many nations across the Middle East and is believed to be the ancestor of both the Arameans and the Hebrews.</p>
         <br>
-        <p>Israel's mother, Rebecka was an Aramean. His maternal grandfather Bethuel is called Aramean<sup>[1]</sup> and so is his uncle Laban<sup>[2]</sup>.</p>
+        <p>Leah and Rachel, the daughters of Laban, who were Arameans and collectively made up the collective Israelite nation, were married to Jacob<sup>[1]</sup>.</p>
+        <p>Israel's mother, Rebecka was an Aramean. His maternal grandfather Bethuel is called Aramean<sup>[2]</sup> and so is his uncle Laban<sup>[3]</sup>.</p>
         <hr class="mt2 bcblack">
-        <small class="gray">Published: 2021-01-08, Last update: 2022-04-17</small>
+        <small class="gray">Published: 2021-01-08, Last update: 2022-05-02</small>
         <small class="gray">Source:&nbsp;
-            <a target="_blank" href="#">Genesis 25:20; 28:5</a> <sup>[1]</sup>,&nbsp;
-            <a target="_blank" href="#">Genesis 31:20, 24</a> <sup>[2]</sup>
+            <a target="_blank" href="#">Genesis 29</a> <sup>[1]</sup>,&nbsp;
+            <a target="_blank" href="#">Genesis 25:20; 28:5</a> <sup>[2]</sup>,&nbsp;
+            <a target="_blank" href="#">Genesis 31:20, 24</a> <sup>[3]</sup>
         </small>
     </article>
 
