--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <base env="local:/;prod:/">
     <link type="text/css" href="https://3el.github.io/front/dist/front.css" rel="stylesheet">
     <link type="text/css" href="https://3el.github.io/front/dist/design/front/theme/front.css" rel="stylesheet">
-    <script src="https://3el.github.io/front/dist/front.js" lib="nav;globalize"></script>
+    <script src="https://www.front.nu/dist/front.js" lib="nav;globalize"></script>
 </head>
 <body>
     <header></header>
