--- a/article/aram-israel-relations.html
+++ b/article/aram-israel-relations.html
@@ -25,8 +25,7 @@
         <br>
         <p>Shem's son Aram played a key role in the creation of many nations across the Middle East and is believed to be the ancestor of both the Arameans and the Hebrews.</p>
         <br>
-        <p>Leah and Rachel, the daughters of Laban, who were Arameans and collectively made up the collective Israelite nation, were married to Jacob<sup>[1]</sup>.</p>
-        <p>Israel's mother, Rebecka was an Aramean. His maternal grandfather Bethuel is called Aramean<sup>[2]</sup> and so is his uncle Laban<sup>[3]</sup>.</p>
+        <p>Jacob who later became Israel, was forbidden by his father Isaac to marry a Canaanite woman, so he was commanded to marry Leah and Rachel<sup>[1]</sup>, both Aramean daughters of Laban. His mother, Rebecka was an Aramean. His maternal grandfather Bethuel is called Aramean<sup>[2]</sup> and so is his uncle Laban<sup>[3]</sup>.</p>
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-01-08, Last update: 2022-05-02</small>
         <small class="gray">Source:&nbsp;
