--- a/home.html
+++ b/home.html
@@ -1,3 +1,8 @@
+<template>
+    <aside index="0"></aside>
+    <aside index="1"></aside>
+</template>
+
 <section class="h100 bcred white dac">
     <nav class="slider tshade1 dc gap05-" json="true" iterate="articles" datasource="assets/json/articles.json">
         <div class="sl" skip><a onclick="alert('c')"><i class="icon64 bcblack02 d0">&#706;</i></a></div>
