--- a/404.html
+++ b/404.html
@@ -6,8 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <base env="local:/;prod:/">
-    <link type="text/css" href="https://3el.github.io/front/dist/front.css" rel="stylesheet">
-    <link type="text/css" href="https://3el.github.io/front/dist/design/front/theme/front.css" rel="stylesheet">
+    <link type="text/css" href="https://www.front.nu/dist/front.css" rel="stylesheet">
+    <link type="text/css" href="https://www.front.nu/dist/design/front/theme/front.css" rel="stylesheet">
     <script src="https://www.front.nu/dist/front.js" lib="nav;globalize"></script>
 </head>
 <body>
