--- a/policy/cookie/index.html
+++ b/policy/cookie/index.html
@@ -3,7 +3,7 @@
 <title globalize="cookie_policy">Cookie Policy</title>
 
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
-    <h1>Cookie Policy</h1>
+    <h1 globalize="cookie_policy">Cookie Policy</h1>
     <h6>Last updated: 2021-01-09</h6>
 </div>
 
