--- a/policy/privacy/index.html
+++ b/policy/privacy/index.html
@@ -5,7 +5,7 @@
 <template>
     <aside index="1">
         <nav class="sidebar black white- w15 pt105" selective="true">
-            <h5 class="white pl2">Contents</h5>
+            <h5 class="white pl2" globalize="contents">Contents</h5>
             <ul>
                 <li><a href="#infocollect">1. What information do we collect?</a></li>
                 <li><a href="#infoshare">2. Will your information be shared with anyone?</a></li>
@@ -27,7 +27,7 @@
 </template>
 
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
-    <h1>Privacy Policy</h1>
+    <h1 globalize="privacy_policy">Privacy Policy</h1>
     <h6>Last updated: 2021-01-09</h6>
 </div>
 
