--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
 
     <nav class="topbar bcwhite shade1 h4_5 lg_fs0- gap2- sred-" selective="true">
-        <a href="#menu" class="button xl_du bc0 red p0 br0 shade1"><i class="icon32">≡</i></a>
+        <a href="#menu" class="button xl_du bc0 red br0 shade1"><i class="icon32">≡</i></a>
         <figure><a class="b0" href="" target="_self"><img src="assets/img/logo.png"></a></figure>
         <a class="xl_dn" href="research/ethnology" globalize="ethnology">Ethnology</a>
         <a class="xl_dn" href="collection/statistics" globalize="statistics">Statistics</a>
@@ -42,7 +42,7 @@
 
         <div id="menu" class="modal menu bcred br0">
             <nav class="topbar flc0 shade h4_5 bcblack01 sblack-">
-                <a href="#" class="button xl_du bc0 yellow- p0 br0 shade1"><i class="icon32">&#10060;</i></a>
+                <a href="#" class="button xl_du bc0 yellow- br0 shade1"><i class="icon32">&#10060;</i></a>
                 <figure><img src="assets/img/logo_white.png"></figure>
             </nav>
             <section class="white-">
