--- a/research/ethnology/language.html
+++ b/research/ethnology/language.html
@@ -1,4 +1,4 @@
-<script src="https://www.front.nu/dist/front.js" template="../../index;../../research/ethnology/index"></script>
+<script src="https://cdn.front.nu/dist/front.js" template="../../index;../../research/ethnology/index"></script>
 
 <title globalize="language">Language</title>
 
