--- a/article/israel-recognizes-aramean-nationality.html
+++ b/article/israel-recognizes-aramean-nationality.html
@@ -1,4 +1,4 @@
-<script src="https://www.front.nu/dist/front.js" template="../index"></script>
+<script src="https://cdn.front.nu/dist/front.js" template="../index"></script>
 
 <title>Israel recognizes the Arameans as separate nationality</title>
 
