--- a/article/kaldu-arameans-in-babylon.html
+++ b/article/kaldu-arameans-in-babylon.html
@@ -1,4 +1,4 @@
-<script src="https://www.front.nu/dist/front.js" template="../index"></script>
+<script src="https://cdn.front.nu/dist/front.js" template="../index"></script>
 
 <title>The Kaldu-Arameans in Babylon</title>
 
