--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
     <meta property="og:image" content="https://www.aramean.institute/assets/img/logo_fb.png"/>
     <base env="local:/;prod:/">
     <link type="image/x-icon" href="favicon.ico" rel="shortcut icon">
-    <link type="text/css" href="https://www.front.nu/dist/front.css" rel="stylesheet">
+    <link type="text/css" href="https://cdn.front.nu/dist/front.css" rel="stylesheet">
     <!--<link type="text/css" href="http://localhost:8888/dist/front.css" rel="stylesheet">-->
-    <link type="text/css" href="https://www.front.nu/dist/design/front/theme/front.css" rel="stylesheet">
-    <script src="https://www.front.nu/dist/front.js" lib="popup;nav;json;globalize"></script>
+    <link type="text/css" href="https://cdn.front.nu/dist/design/front/theme/front.css" rel="stylesheet">
+    <script src="https://cdn.front.nu/dist/front.js" lib="popup;nav;json;globalize"></script>
     <!--<script src="http://localhost:8888/dist/front.js" lib="popup;nav;json;globalize"></script>-->
     <script src="https://www.googletagmanager.com/gtag/js?id=G-4Z8JXR2XX0" async></script>
     <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-4Z8JXR2XX0')</script>
 </head>
 <body class="bg">
+    {% currentEnvName %}
     <header>
         <div id="navloader" class="navloader pa t0 w100 bcwhite02 d0"><div id="navprogress" class="bcwhite04"></div></div>
         <nav class="topbar dark shade05 h2_5 gap2- z08 xl_dn fwb" selective="true">
