--- a/press/index.html
+++ b/press/index.html
@@ -1,4 +1,4 @@
-<script src="https://www.front.nu/dist/front.js" title="Press" template="../index"></script>
+<script src="https://cdn.front.nu/dist/front.js" title="Press" template="../index"></script>
     
 <template>
     <aside index="0"></aside>
