--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -18,15 +18,15 @@
     <hr class="bos8 red mt2 mb2">
     <article json="true;loader" iterate="false" datasource="https://gqfktgknxmguhxgkajat.supabase.co/rest/v1/rpc/persons" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMDc2MTg0NCwiZXhwIjoxOTM2MzM3ODQ0fQ.xEa_GuNypFdHSdQVLCd0beoL_v8jhWKjSTypX6kn-sg">
         <h2 globalize="population" class="mb1">Population</h2>
-        <h7>Registred living people in Diaspora:</h7>
+        <h7 globalize="registered_living_people">Registered living people:</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="alive"></i></p>
-        <h7>Registred dead people in Diaspora:</h7>
+        <h7 globalize="registered_dead_people">Registered dead people:</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="dead"></i></p>
     </article>
     <hr class="bos8 red mt2 mb2">
     <article json="true;loader" iterate="false" datasource="https://fepmwokzjfhuyhyggktb.supabase.co/rest/v1/rpc/words" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMTc4OTE1OCwiZXhwIjoxOTM3MzY1MTU4fQ.AhcMTJs8FwpE-CL_TvxGyQuo8E4PUjHhQ_qOshlv6BU">
         <h2 globalize="language" class="mb1">Language</h2>
-        <b class="mb1">Modern Aramaic</b>
+        <b class="mb1" globalize="modern_aramaic">Modern Aramaic</b>
         <h7>Registred words in Suryoyo:</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="suryoyo"></i></p>
         <h7>Registred words in Surayt:</h7>
@@ -36,7 +36,7 @@
         <h7>Registred words in Suryon:</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true">0</i></p>
         <hr>
-        <b class="mb1">Late Aramaic</b>
+        <b class="mb1" globalize="late_aramaic">Late Aramaic</b>
         <h7>Registred words in Suryaya:</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="suryaya"></i></p>
         <h7>Registred words in Aramaya:</h7>
