--- a/research/ethnology/linguistics/late_aramaic.html
+++ b/research/ethnology/linguistics/late_aramaic.html
@@ -18,7 +18,28 @@
     </nav>
 
     <article class="mt2">
-        <p>Late Aramaic (c. 200-1200 AD)</p>        
+        <p>Late Aramaic (c. 100 AD - 1200 AD)</p>
+
+        <section class="mt1">
+            <h2>Galilean</h2>
+        </section>
+        <section class="mt1">
+            <h2>Palestinian</h2>
+        </section>
+        <section class="mt1">
+            <h2>Samaritan</h2>
+        </section>
+        <section class="mt1">
+            <h2>Suryaya</h2>
+            Also known as Urhaya, Edessan, old Syriac
+        </section>
+        <section class="mt1">
+            <h2>Talmudic</h2>
+        </section>
+        <section class="mt1">
+            <h2>Mandaic</h2>
+        </section>
+
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-07-30, Last update: 2021-07-30</small>
     </article>
