--- a/research/ethnology/linguistics/modern_aramaic.html
+++ b/research/ethnology/linguistics/modern_aramaic.html
@@ -19,6 +19,20 @@
 
     <article class="mt2">
         <p>Modern Aramaic or Neo-Aramaic (c. 1200 AD) refers to the latest punctual phase of the Aramaic language spoken by Arameans until today.</p>        
+        
+        <section class="mt1">
+            <h2 globalize="surayt">Surayt</h2>
+        </section>
+
+        <section class="mt1">
+            <h2 globalize="surayt">Sureth</h2>
+        </section>
+
+        <section class="mt1">
+            <h2>Suryon</h2>
+            Ma'luli, also known as Western Neo-Aramaic.
+        </section>
+        
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-06-29, Last update: 2021-06-29</small>
     </article>
