--- a/research/ethnology/linguistics/official_aramaic.html
+++ b/research/ethnology/linguistics/official_aramaic.html
@@ -18,7 +18,13 @@
     </nav>
 
     <article class="mt2">
-        <p>Official Aramaic or Imperial Aramaic, also known as Standard Aramaic (c. 600–200 BC), became the official language of the Neo-Assyrian Empire, Neo-Babylonian Empire, and later Achaemenid Persian Empire.</p>        
+        <p>Official Aramaic or Imperial Aramaic, also known as Standard Aramaic (c. 700 BC – 300 BC), became the official language of the Neo-Assyrian Empire, Neo-Babylonian Empire, and later Achaemenid Persian Empire.</p>        
+        
+        <section class="mt1">
+            <h2 globalize="pahlavi">Arami</h2>
+            X BC - X BC
+        </section>
+
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-03-24, Last update: 2021-03-24</small>
     </article>
