--- a/research/ethnology/linguistics/old_aramaic.html
+++ b/research/ethnology/linguistics/old_aramaic.html
@@ -18,7 +18,18 @@
     </nav>
 
     <article class="mt2">
-        <p>Old Aramaic or Ancient Aramaic (c. 850-1000 BC) refers to the most punctual phase of the Aramaic language, known from the bilingual inscription discovered 1979 in Tell Fekheriyah. The language was first spoken by the Arameans and possibly by Aram, son of Shem, from whom it gets its name.</p>        
+        <p>Old Aramaic or Ancient Aramaic (c. 700 BC - 1000 BC) refers to the most punctual phase of the Aramaic language, known from the bilingual inscription discovered 1979 in Tell Fekheriyah. The language was first spoken by the Arameans and possibly by Aram, son of Shem, from whom it gets its name.</p>        
+        
+        <section class="mt1">
+            <h2 globalize="samalian">Aram</h2>
+            X BC - X BC
+        </section>
+
+        <section class="mt1">
+            <h2 globalize="samalian">Samalian</h2>
+            X BC - X BC
+        </section>
+
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-01-13, Last update: 2021-07-30</small>
     </article>
