--- a/research/ethnology/linguistics/middle_aramaic.html
+++ b/research/ethnology/linguistics/middle_aramaic.html
@@ -18,7 +18,23 @@
     </nav>
 
     <article class="mt2">
-        <p>Middle Aramaic refers to the phase after Late Aramaic ceased to be a living language and dialects began to change.</p>        
+        <p>Middle Aramaic (300 BC - 100 AD) refers to the phase after Late Aramaic ceased to be a living language and dialects began to change.</p>
+
+        <section class="mt1">
+            <h2 globalize="hatran">Hatran</h2>
+            100 BC – 240 AD
+        </section>
+
+        <section class="mt1">
+            <h2 globalize="nabatean">Nabatean</h2>
+            150 BC - 150 AD
+        </section>
+
+        <section class="mt1">
+            <h2 globalize="palmyrean">Palmyrean</h2>
+            1 AD - 273 AD
+        </section>
+
         <hr class="mt2 bcblack">
         <small class="gray">Published: 2021-07-30, Last update: 2021-07-30</small>
     </article>
