--- a/research/ethnology/linguistics/middle_aramaic.html
+++ b/research/ethnology/linguistics/middle_aramaic.html
@@ -18,7 +18,7 @@
     </nav>
 
     <article class="mt2">
-        <p>Middle Aramaic (300 BC - 100 AD) refers to the phase after Late Aramaic ceased to be a living language and dialects began to change.</p>
+        <p>Middle Aramaic (300 BC - 100 AD) refers to the phase after Late Aramaic stopped being a common language and dialects began to change.</p>
 
         <section class="mt1">
             <h2 globalize="hatran">Hatran</h2>
