--- a/research/ethnology/linguistics/official_aramaic.html
+++ b/research/ethnology/linguistics/official_aramaic.html
@@ -21,7 +21,7 @@
         <p>Official Aramaic or Imperial Aramaic, also known as Standard Aramaic (c. 700 BC – 300 BC), became the official language of the Neo-Assyrian Empire, Neo-Babylonian Empire, and later Achaemenid Persian Empire.</p>        
         
         <section class="mt1">
-            <h2 globalize="pahlavi">Arami</h2>
+            <h2 globalize="pahlavi">Aramaya</h2>
             X BC - X BC
         </section>
 
