--- a/research/ethnology/linguistics/modern_aramaic.html
+++ b/research/ethnology/linguistics/modern_aramaic.html
@@ -19,17 +19,21 @@
 
     <article class="mt2">
         <p>Modern Aramaic or Neo-Aramaic (c. 1200 AD) refers to the latest punctual phase of the Aramaic language spoken by Arameans until today.</p>        
-        
+
+        <section class="mt1">
+            <h2 globalize="suryoyo">Suryoyo</h2>
+        </section>
+
         <section class="mt1">
             <h2 globalize="surayt">Surayt</h2>
         </section>
 
         <section class="mt1">
-            <h2 globalize="surayt">Sureth</h2>
+            <h2 globalize="sureth">Sureth</h2>
         </section>
 
         <section class="mt1">
-            <h2>Suryon</h2>
+            <h2 globalize="suryon">Suryon</h2>
             Ma'luli, also known as Western Neo-Aramaic.
         </section>
         
