--- a/article/mor-michael-rabo-missing-comma-word.html
+++ b/article/mor-michael-rabo-missing-comma-word.html
@@ -17,15 +17,19 @@
     </nav>
 
     <article class="mt2">
-        <p>Theologian Jean Baptist Chabot's first edition of his interpretation of the Chronicle of Michael the Great lacked a comma and left out "Oromoye", meaning "Arameans" in the sentence.</p>
-        <br>
-        <p>The error result went viral online for years and confused many Arameans when the body text stated "Othuroye d-henun Suryoye", meaning "Assyrians are Syriacs".</p>
+        <p>Theologian Jean-Baptiste Chabot's first edition of his interpretation of the Chronicle of Michael the Great lacked a comma and left out "Oromoye", meaning "Arameans" in the sentence.</p>
         <br>
         <p>In the first edition, it is clear that the heading says "Shmohe d-'ame d-ith l-hun sefro d-men bnayo d-Shim", meaning "Semitic people descendants of Shem", but no mentions of "Aram" being one of Shem's sons in the subheading, however reading further on page 11, it says: "Bnay Shim: Othuroye, Kaldoye, Ludoye, Oromoye d-henun Suryoye, Ebroye, Forsoye", meaning "Children of Shem: Assyrians, Chaldeans, Lydians, Arameans that is Syriacs, Hebrews, and Persians."</p>
         <br>
-        <p>The error was corrected in 2006 in a new edition which was published with the correct interpretation, thanks to Dayroyo Isa Aygur, Mushe Görgun, Steffanos Budak, Iskender Demirel, Eliyo Seven beth Qemez, and Gabriel Yalgin.</p>
+        <p>The error result went viral online for years and confused many Arameans when the body text stated "Othuroye d-henun Suryoye", meaning "Assyrians are Syriacs".</p>
+        <br>
+        <p>Thanks to Fr. Dayroyo Isa Aygür, Mushe Görgün, Steffanos Budak, Iskender Demirel, Eliyo Seven Beth Qemez, and Gabriel Yalgin, the error was corrected in a new edition of the Chronicle (Ktābā d-Maktbānút zabne)<sup>[1]</sup> that was published 2006.</p>
         <hr class="mt2 bcblack">
-        <small class="gray">Published: 2021-01-12, Last update: 2021-03-08</small>
+        <small class="gray">Published: 2021-01-12, Last update: 2022-06-29</small>
+        <small class="gray">Source:&nbsp;
+            <a target="_blank" href="https://openlibrary.org/books/OL30948901M/Kt%C4%81b%C4%81_d-Maktb%C4%81n%C3%BAt_zabne">Ktābā d-Maktbānút zabne</a> <sup>[1]</sup>,&nbsp;
+            <a target="_blank" href="https://openlibrary.org/works/OL28054427W/Texts_and_Translations_of_the_Chronicle_of_Michael_the_Great">Texts and Translations of the Chronicle of Michael the Great</a> <sup>[2]</sup>,&nbsp;
+        </small>
     </article>
 
 </section>
