--- a/article/mor-michael-rabo-missing-comma-word.html
+++ b/article/mor-michael-rabo-missing-comma-word.html
@@ -17,11 +17,13 @@
     </nav>
 
     <article class="mt2">
-        <p>Theologian Jean-Baptiste Chabot's first edition of his interpretation of the Chronicle of Michael the Great<sup>[1]</sup> lacked a comma and left out "Oromoye", meaning "Arameans" in the sentence.</p>
+        <p>Theologian Jean-Baptiste Chabot's first edition of his interpretation of the Chronicle of Michael the Great<sup>[1]</sup> lacked a comma and left out "Arameans" in the sentence when he didn't correct the known errors in the Edessan-Aleppo codex manuscript.</p>
         <br>
-        <p>In the first edition, it is clear that the heading says "Shmohe d-'ame d-ith l-hun sefro d-men bnayo d-Shim", meaning "Semitic people descendants of Shem", but no mentions of "Aram" being one of Shem's sons in the subheading, however reading further on page 11, it says: "Bnay Shim: Othuroye, Kaldoye, Ludoye, Oromoye d-henun Suryoye, Ebroye, Forsoye", meaning "Children of Shem: Assyrians, Chaldeans, Lydians, Arameans that is Syriacs, Hebrews, and Persians."</p>
+        <p>Because the manuscript of the Edessan-Aleppo codex was corrupted during copying, Chabot did not correct the error, and it became "Othuroye d-henun Suryoye", meaning "Assyrians are Syriacs", a claim that is not true.</p>
         <br>
-        <p>The error result went viral online for years and confused many Arameans when the body text stated "Othuroye d-henun Suryoye", meaning "Assyrians are Syriacs".</p>
+        <p>As it appears in the first edition, the heading says "Shmohe d-'ame d-ith l-hun sefro d-men bnayo d-Shim", meaning "Semitic people descendants of Shem", but no mentions of "Aram" being one of Shem's sons in the subheading, however reading further on page 11, it says: "Bnay Shim: Othuroye, Kaldoye, Ludoye, Oromoye d-henun Suryoye, Ebroye, Forsoye", meaning "Children of Shem: Assyrians, Chaldeans, Lydians, Arameans that is Syriacs, Hebrews, and Persians."</p>
+        <br>
+        <p>The error resulted went viral online for years and confused many Arameans around the world.</p>
         <br>
         <p>Thanks to Fr. Dayroyo Isa Aygür, Mushe Görgün, Steffanos Budak, Iskender Demirel, Eliyo Seven Beth Qemez, and Gabriel Yalgin, the error was corrected in a new edition of the Chronicle (Ktābā d-Maktbānút zabne)<sup>[2]</sup> that was published 2006.</p>
         <hr class="mt2 bcblack">
