--- a/development/technology/index.html
+++ b/development/technology/index.html
@@ -27,7 +27,7 @@
         <figure>
             <h5 jsonget="title"></h5>
             <h7 jsonget="summary"></h7>
-            <div><a class="button bcred fr" jsonget="link" target="_blank" href="#"><i class="icon">🔗</i>Go to project</a></div>
+            <div><a class="button bcred fr" jsonget="link" target="_blank" href="#" globalize="go_to_project"><i class="icon">🔗</i>Go to project</a></div>
         </figure>
     </div>
 
