--- a/research/ethnology/linguistics/late_aramaic.html
+++ b/research/ethnology/linguistics/late_aramaic.html
@@ -1,4 +1,4 @@
-<script src="https://cdn.front.nu/dist/front.js" template="../../../index;../../../research/ethnology/index"></script>
+<script src="https://cdn.front.nu/dist/front.js" template="index;research/ethnology/index"></script>
 
 <title globalize="late_aramaic">Late Aramaic</title>
 
