--- a/article/aramaya-arhaya-suryaya-suryoyo-urhoyo-turabdin.html
+++ b/article/aramaya-arhaya-suryaya-suryoyo-urhoyo-turabdin.html
@@ -1,4 +1,4 @@
-<script src="https://cdn.front.nu/dist/front.js" template="../index"></script>
+<script src="https://cdn.front.nu/dist/front.js" template="index"></script>
 
 <title>The holy language of Tur Abdin</title>
 
