--- a/article/mor-aday-apostle-thaddeus-syria-urhoy.html
+++ b/article/mor-aday-apostle-thaddeus-syria-urhoy.html
@@ -1,4 +1,4 @@
-<script src="https://cdn.front.nu/dist/front.js" template="../index"></script>
+<script src="https://cdn.front.nu/dist/front.js" template="index"></script>
 
 <title>Apostolic mission of Thaddeus in Aram (Syria)</title>
 
