--- a/development/arts/index.html
+++ b/development/arts/index.html
@@ -1,4 +1,4 @@
-<script src="https://cdn.front.nu/dist/front.js" template="../../index"></script>
+<script src="https://cdn.front.nu/dist/front.js" template="index"></script>
 
 <title globalize="arts">Arts</title>
 
@@ -23,10 +23,10 @@
         <h2 globalize="graphics">Graphics</h2>
         <hr class="bos8 red mt2 mb2">
     </article>
-    <div json="true" iterate="arts" datasource="../../../assets/json/arts.json" class="box cards gut3- br05- bcwhite- border- tac md_gtc1 xl_gtc2 p2-">
+    <div json="true" iterate="arts" datasource="./assets/json/arts.json" class="box cards gut3- br05- bcwhite- border- tac md_gtc1 xl_gtc2 p2-">
         <figure class="gaph1-">
             <h5 jsonget="title" class="mb1"></h5>
-            <img class="w90 pb1" src="" jsonbefore="../../../" jsonget="image">
+            <img class="w90 pb1" src="" jsonbefore="./" jsonget="image">
             <h7 jsonget="summary"></h7>
             <small jsonget="license" jsonbefore="License: "></small>
             <small jsonget="designer" jsonbefore="Designer: "></small>
