--- a/faq/index.html
+++ b/faq/index.html
@@ -1,4 +1,4 @@
-<script src="https://cdn.front.nu/dist/front.js" template="../index"></script>
+<script src="https://cdn.front.nu/dist/front.js" template="index"></script>
 
 <title globalize="faq">Frequently Asked Questions​</title>
 
