--- a/development/technology/index.html
+++ b/development/technology/index.html
@@ -1,4 +1,4 @@
-<script src="https://cdn.front.nu/dist/front.js" template="../../index"></script>
+<script src="https://cdn.front.nu/dist/front.js" template="index"></script>
 
 <title globalize="software_technology">Software Technology</title>
 
@@ -23,7 +23,7 @@
         An important part of the Aramean Institute's mission is developing software that benefits Arameans and society alike.
     </article>
 
-    <div json="true" iterate="projects" datasource="../../../assets/json/projects.json" class="box cards list gut3- br05- border- tac p2-">
+    <div json="true" iterate="projects" datasource="./assets/json/projects.json" class="box cards list gut3- br05- border- tac p2-">
         <figure>
             <h5 jsonget="title"></h5>
             <h7 jsonget="summary"></h7>
