--- a/article/mor-michael-rabo-missing-comma-word.html
+++ b/article/mor-michael-rabo-missing-comma-word.html
@@ -19,7 +19,7 @@
     <article class="mt2">
         <p>Theologian Jean-Baptiste Chabot's first edition of his interpretation of the Chronicle of Michael the Great<sup>[1]</sup> lacked a comma and left out "Arameans" in the sentence when he didn't correct the known errors in the Edessan-Aleppo codex manuscript.</p>
         <br>
-        <p>The Aramaic-Syriac manuscript of the Edessan-Aleppo codex was corrupted during copying. Rather than correcting the errors in his work, Chabot passed on them, and the text became "Othuroye d-henun Suryoye", meaning "Assyrians are Syriacs", An untrue statement.</p>
+        <p>During the copying process, the Aramaic-Syriac manuscript of the Edessan-Aleppo codex was corrupted. Instead of correcting the errors in his work, Chabot passed them on, and the sentence became "Othuroye d-henun Suryoye", which means "Assyrians are Syriacs.". An untrue statement.</p>
         <br>
         <p>As it appears in the first edition, the heading says "Shmohe d-'ame d-ith l-hun sefro d-men bnayo d-Shim", meaning "Semitic people descendants of Shem", but no mentions of "Aram" being one of Shem's sons in the subheading, however reading further on page 11, it says: "Bnay Shim: Othuroye, Kaldoye, Ludoye, Oromoye d-henun Suryoye, Ebroye, Forsoye", meaning "Children of Shem: Assyrians, Chaldeans, Lydians, Arameans that is Syriacs, Hebrews, and Persians."</p>
         <br>
@@ -27,7 +27,7 @@
         <br>
         <p>Thanks to Fr. Dayroyo Isa Aygür, Mushe Görgün, Steffanos Budak, Iskender Demirel, Eliyo Seven Beth Qemez, and Gabriel Yalgin, the error was corrected in a new edition of the Chronicle (Ktābā d-Maktbānút zabne)<sup>[2]</sup> that was published 2006.</p>
         <hr class="mt2 bcblack">
-        <small class="gray">Published: 2021-01-12, Last update: 2022-07-01</small>
+        <small class="gray">Published: 2021-01-12, Last update: 2022-07-03</small>
         <small class="gray">Source:&nbsp;
             <a target="_blank" href="https://openlibrary.org/works/OL28054427W/Texts_and_Translations_of_the_Chronicle_of_Michael_the_Great">Texts and Translations of the Chronicle of Michael the Great</a> <sup>[1]</sup>,&nbsp;
             <a target="_blank" href="https://openlibrary.org/books/OL30948901M/Kt%C4%81b%C4%81_d-Maktb%C4%81n%C3%BAt_zabne">Ktābā d-Maktbānút zabne</a> <sup>[2]</sup>,&nbsp;
