--- a/article/mor-michael-rabo-missing-comma-word.html
+++ b/article/mor-michael-rabo-missing-comma-word.html
@@ -17,9 +17,9 @@
     </nav>
 
     <article class="mt2">
-        <p>Theologian Jean-Baptiste Chabot's first edition of his interpretation of the Chronicle of Michael the Great<sup>[1]</sup> lacked a comma and left out "Arameans" in the sentence when he didn't correct the known errors in the Edessan-Aleppo codex manuscript.</p>
+        <p>During the copying process, the Aramaic-Syriac manuscript of the Edessan-Aleppo codex was corrupted.</p>
         <br>
-        <p>During the copying process, the Aramaic-Syriac manuscript of the Edessan-Aleppo codex was corrupted. Instead of correcting the errors in his work, Chabot passed them on, and the sentence became "Othuroye d-henun Suryoye", which means "Assyrians are Syriacs.". An untrue statement.</p>
+        <p>Theologian Jean-Baptiste Chabot's first edition of his interpretation of the Chronicle of Michael the Great<sup>[1]</sup> lacked a comma and left out "Arameans" in the sentence when he didn't correct the known errors in the Edessan-Aleppo codex manuscript. Instead of correcting the errors in his work, Chabot passed them on, and the sentence became "Othuroye d-henun Suryoye", which means "Assyrians are Syriacs.". An untrue statement.</p>
         <br>
         <p>As it appears in the first edition, the heading says "Shmohe d-'ame d-ith l-hun sefro d-men bnayo d-Shim", meaning "Semitic people descendants of Shem", but no mentions of "Aram" being one of Shem's sons in the subheading, however reading further on page 11, it says: "Bnay Shim: Othuroye, Kaldoye, Ludoye, Oromoye d-henun Suryoye, Ebroye, Forsoye", meaning "Children of Shem: Assyrians, Chaldeans, Lydians, Arameans that is Syriacs, Hebrews, and Persians."</p>
         <br>
