--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -41,7 +41,7 @@
     <nav class="crumbs pointer pt05">
         <ol>
             <li><a href="#" globalize="research" title="Research">Research</a></li>
-            <li><a href="#" globalize="ethnology" title="Ethnology">Ethnology</a></li>
+            <li><a href="research/ethnology" globalize="ethnology" title="Ethnology">Ethnology</a></li>
             <li globalize="overview">Overview</li>
         </ol>
     </nav>
