--- a/collection/statistics/index.html
+++ b/collection/statistics/index.html
@@ -15,7 +15,7 @@
     <article class="mb2" globalize="page_statistcs_text1">
         The statistics are live and based on the information that <a href="https://aramean.center" target="_blank">Aramean Center</a> shares with Aramean Institute.
     </article>
-    <hr class="bos8 red mt2 mb2">
+    <hr class="bos8 bcred mt2 mb2">
     <article json="true;loader" iterate="false" datasource="https://gqfktgknxmguhxgkajat.supabase.co/rest/v1/rpc/persons" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMDc2MTg0NCwiZXhwIjoxOTM2MzM3ODQ0fQ.xEa_GuNypFdHSdQVLCd0beoL_v8jhWKjSTypX6kn-sg">
         <h2 globalize="population" class="mb1">Population</h2>
         <h7 globalize="registered_living_people">Registered living people:</h7>
@@ -23,7 +23,7 @@
         <h7 globalize="registered_dead_people">Registered dead people:</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="dead"></i></p>
     </article>
-    <hr class="bos8 red mt2 mb2">
+    <hr class="bos8 bcred mt2 mb2">
     <article json="true;loader" iterate="false" datasource="https://fepmwokzjfhuyhyggktb.supabase.co/rest/v1/rpc/words" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMTc4OTE1OCwiZXhwIjoxOTM3MzY1MTU4fQ.AhcMTJs8FwpE-CL_TvxGyQuo8E4PUjHhQ_qOshlv6BU">
         <h2 globalize="language" class="mb1">Language</h2>
         <b class="mb1" globalize="modern_aramaic">Modern Aramaic</b>
@@ -42,7 +42,7 @@
         <h7 globalize="registered_words_aramaya">Registered words in Aramaya:</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true">0</i></p>
     </article>
-    <hr class="bos8 red mt2 mb2">
+    <hr class="bos8 bcred mt2 mb2">
     <article json="true;loader" iterate="false" datasource="https://gqfktgknxmguhxgkajat.supabase.co/rest/v1/rpc/buildings" dataheader="apikey:eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJyb2xlIjoiYW5vbiIsImlhdCI6MTYyMDc2MTg0NCwiZXhwIjoxOTM2MzM3ODQ0fQ.xEa_GuNypFdHSdQVLCd0beoL_v8jhWKjSTypX6kn-sg">
         <h2 globalize="properties" class="mb1">Properties</h2>
         <b class="mb1" globalize="buildings">Buildings</b>
@@ -51,7 +51,7 @@
         <h7 globalize="registered_schools">Registered schools:</h7>
         <p><i class="tag br2 bcblack01 p05 fwb w10r pr1 pl1 mb1 mt05" loader="true" jsonget="schools"></i></p>
     </article>
-    <hr class="bos8 red mt2 mb2">
+    <hr class="bos8 bcred mt2 mb2">
 </section>
 
 <section include="./footer.html" class="bcred white white- p1"></section>
