--- a/development/arts/index.html
+++ b/development/arts/index.html
@@ -21,7 +21,7 @@
 
     <article>
         <h2 globalize="graphics">Graphics</h2>
-        <hr class="bos8 red mt2 mb2">
+        <hr class="bos8 bcred mt2 mb2">
     </article>
     <div json="true" iterate="arts" datasource="./assets/json/arts.json" class="box cards gut3- br05- bcwhite- border- tac md_gtc1 xl_gtc2 p2-">
         <figure class="gaph1-">
