--- a/development/technology/index.html
+++ b/development/technology/index.html
@@ -19,9 +19,7 @@
 </div>
 
 <section class="pauto">
-  <article class="mb2">
-    Developing technology for the benefit of both Arameans and society is an important part of the Aramean Institute's mission.
-  </article>
+  <p class="mb2" globalize="page_technology_text1"></p>
 
   <h2 globalize="software_technology" class="mb1">Software Technology</h2>
   <div json="true" iterate="projects" datasource="./assets/json/projects.json"
