--- a/development/technology/index.html
+++ b/development/technology/index.html
@@ -20,6 +20,7 @@
 
 <section class="pauto">
   <p class="mb2" globalize="page_technology_text1"></p>
+  <hr class="bos8 bcred mt2 mb2">
 
   <h2 globalize="software_technology" class="mb1">Software Technology</h2>
   <div json="true" iterate="projects" datasource="./assets/json/projects.json"
