--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </header>
 
     <nav class="topbar bcwhite shade1 h4_5 lg_fs0- gap2- sred-" selective="true">
-        <a href="#menu" class="button xl_du bc0 bcred br0 shade1"><i class="icon32">≡</i></a>
+        <a href="#menu" class="button xl_du bc0 red br0 shade1"><i class="icon32">≡</i></a>
         <figure><a class="b0" href="" target="_self"><img src="assets/img/logo.png"></a></figure>
         <a class="xl_dn" href="research/ethnology" globalize="ethnology">Ethnology</a>
         <a class="xl_dn" href="collection/statistics" globalize="statistics">Statistics</a>
