--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
                 <h3 class="beige tshade1" jsonget="summary"></h3>
                 <a href="#" jsonget="link" class="button p1 bcblack white mt2 br05 xm_w100p" globalize="read_more">Read more</a>
             </article>
-            <figure if="!{{ jsonget:image }};;background:{{ jsonget:image }}" class="bpc">
+            <figure if="!{{ jsonget:image }};;background:{{ jsonget:image }}">
                 <span class="bcblack04 pa hm100 w100"></span>
             </figure>
         </section>
